--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ packaging==18.0
 pandas==0.23.4
 pluggy==0.8.0
 py==1.7.0
-Pygments==2.2.0
+Pygments>=2.7.4
 pymongo==3.7.2
 pyparsing==2.2.2
 pytest==3.9.1
